# katalog-lib

./: Cargo.toml  README.md  justfile
dispatch/: Cargo.toml
dispatch/dispatch-lib/: Cargo.toml
dispatch/dispatch-lib/src/: attr.rs  dispatch_fn.rs  dispatch_parameter.rs  kw.rs  lib.rs  mono_closure.rs  path_prefix.rs  psuedo_closure.rs  util.rs
dispatch/dispatch-lib/src/attr/: dispatch_attr.rs  dispatch_fn_attr.rs  field_attr.rs  variant_attr.rs
dispatch/dispatch-test/: Cargo.toml
dispatch/dispatch-test/src/: lib.rs  tests.rs
dispatch/src/: lib.rs
ipc/: Cargo.toml
ipc/src/: lib.rs  single_process.rs  static_path.rs
katalog-lib/: Cargo.toml
katalog-lib/src/: lib.rs  theme_value_enum.rs
proc-macro-common/: Cargo.toml
proc-macro-common/src/: attr_writer.rs  delimited.rs  dyn_attr.rs  err_collector.rs  extension.rs  last.rs  lazy.rs  lib.rs  lookahead_chain.rs  span_conv.rs  unpack.rs
proc-macro-common/src/extension/: into_block.rs  into_delim_span.rs  into_expr.rs  into_item.rs  into_pat.rs  into_path.rs  into_punctuated.rs  into_statement.rs  into_stmt.rs
reflect/: Cargo.toml
reflect/derive/: Cargo.toml
reflect/derive-lib/: Cargo.toml
reflect/derive-lib/src/: get.rs  variants.rs
reflect/derive/src/: lib.rs
reflect/src/: lib.rs
settings/: Cargo.toml
settings/src/: cached.rs  error.rs  factory.rs  io.rs  lib.rs  primitive.rs  ref_setting.rs  setting.rs  setting_value.rs  spec.rs  sync.rs
settings/src/spec/: default_spec.rs  value_spec.rs
traits/: Cargo.toml
traits/src/: lib.rs
widget/: Cargo.toml
widget/src/: lib.rs
