[workspace]
members = [
	"katalog-lib",
	"reflect",
	"reflect/derive",
	"reflect/derive-lib",
	"traits",
	"widget"
]
resolver = "2"
default-members = ["katalog-lib"]

[workspace.package]
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
case_sensitive_file_extension_comparisons = "warn"
dbg_macro = "warn"
future_not_send = "warn"
missing_const_for_fn = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
print_stderr = "warn"
print_stdout = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
todo = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
katalog-lib-reflect-derive-lib = { path = "reflect/derive-lib" }
syn = { version = "2.0.111", default-features = false, features = ["full", "parsing", "printing"] }
proc-macro2 = { version = "1.0.103", default-features = false }
convert_case = "0.10.0"
quote = { version = "1.0.42", default-features = false }
rustc-hash = "2.1.1"
katalog-lib-reflect-derive = { path = "reflect/derive" }
katalog-lib-traits = { path = "traits" }
pretty_assertions = "1.4.1"
katalog-lib-reflect = { path = "reflect" }
clap = "4.5.53"
derive_more = "2.1.1"
iced_core = "0.14.0"
