[package]
name = "katalog-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
katalog-lib-reflect.workspace = true
katalog-lib-traits.workspace = true
iced_core.workspace = true
katalog-lib-widget.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
derive_more = { workspace = true, features = ["from", "into"] }

[lints]
workspace = true
