[package]
name = "katalog-lib-reflect"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
katalog-lib-traits.workspace = true
katalog-lib-reflect-derive.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
