[package]
name = "katalog-lib-settings"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["cached", "sync"]
cached = []
sync = ["dep:parking_lot", "cached"]

[lints]
workspace = true

[dependencies]
parking_lot = { version = "0.12.5", optional = true }
