[package]
name = "katalog-lib-dispatch-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
katalog-lib-proc-macro-common.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }

[lints]
workspace = true
