[package]
name = "katalog-lib-reflect-derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
katalog-lib-reflect-derive-lib.workspace = true
proc-macro2 = { workspace = true, features = ["proc-macro"] }

